Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18987

Back face material is not drawn correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.7.0
    • Qt3D TP1
    • Qt3D
    • None
    • Windows 7 Professional 64 bit, VC++ 2010, Qt 4.7.2, Qt3D Master 129ed97e821af5db686c7f109762ffc7a4151250
    • 9afae597510b9f115dec9b5d2dcd9fb5f73c9764

    Description

      Set the BackMaterial of a QGLSceneNode and use a TwoSided light model.
      Expected outcome:
      The back face is drawn with the correct BackMaterial.

      Actual outcome:
      The back face is drawn gray no matter what BackMaterial is set.

      In my opinion the bug is caused by QGLRenderSequencer::applyState(). In this function only the face Material of QGL::FrontFaces is set.
      There is an simple example to show the bug. If you turn around the quad in the QGLView, then you see its gray back side, but it should have a green one.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dpope Daniel Pope (closed Nokia identity) (Inactive)
              simonkern Simon Kern
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes