Fix faulty drawing of back face material

The old implementation set only the front face material in
applyState(). This commit fixes this behavior and sets the
back face material too.

Task-number: QTBUG-18987
Change-Id: I603ba6b18e12399817abfa55c0e07d0f0d8d91d0
Reviewed-by: Sarah Jane Smith <sarah.j.smith@nokia.com>